replace all occurences of "Blacklist" with "Blocklist"

--- a/src/_locales/bg_BG/messages.json
+++ b/src/_locales/bg_BG/messages.json
@@ -35,9 +35,9 @@
     "message": "Екстри",
     "description": "Extras"
   },
-  "navigationBlacklist": {
+  "navigationBlocklist": {
     "message": "Черен списък",
-    "description": "Blacklist"
+    "description": "Blocklist"
   },
   "navigationAbout": {
     "message": "Относно",
