--- a/src/_locales/pl_PL/messages.json
+++ b/src/_locales/pl_PL/messages.json
@@ -35,9 +35,9 @@
     "message": "Dodatki",
     "description": "Extras"
   },
-  "navigationBlacklist": {
+  "navigationBlocklist": {
     "message": "Czarna lista",
-    "description": "Blacklist"
+    "description": "Blocklist"
   },
   "navigationAbout": {
     "message": "O programie",
