--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -35,9 +35,9 @@
     "message": "Ещё",
     "description": "Extras"
   },
-  "navigationBlacklist": {
+  "navigationBlocklist": {
     "message": "Исключения",
-    "description": "Blacklist"
+    "description": "Blocklist"
   },
   "navigationAbout": {
     "message": "Инфо",
