--- a/src/_locales/tr_TR/messages.json
+++ b/src/_locales/tr_TR/messages.json
@@ -35,9 +35,9 @@
     "message": "Ekstralar",
     "description": "Extras"
   },
-  "navigationBlacklist": {
+  "navigationBlocklist": {
     "message": "Engellenenler listesi",
-    "description": "Blacklist"
+    "description": "Blocklist"
   },
   "navigationAbout": {
     "message": "Hakkında",
