--- a/src/_locales/he_IL/messages.json
+++ b/src/_locales/he_IL/messages.json
@@ -35,9 +35,9 @@
     "message": "Extras",
     "description": "Extras"
   },
-  "navigationBlacklist": {
-    "message": "Blacklist",
-    "description": "Blacklist"
+  "navigationBlocklist": {
+    "message": "Blocklist",
+    "description": "Blocklist"
   },
   "navigationAbout": {
     "message": "About",
