--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -275,27 +275,27 @@
     "message": "Minimální velikost posunu kolečkem pro aktivaci gesta.",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
-  "blacklistLabelInformation": {
+  "blocklistLabelInformation": {
     "message": "Informace:",
     "description": "Information:"
   },
-  "blacklistTextInformation": {
+  "blocklistTextInformation": {
     "message": "Přidat šablony URL pro zakázání Gesturefy na určitých webových stránkách. Šablona povoluje zástupné znaky \"*\" a musí být ve formátu <scheme>://<host><path>.",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
-  "blacklistPlaceholderURL": {
+  "blocklistPlaceholderURL": {
     "message": "Zadejte šablonu pro URL",
     "description": "Enter URL match pattern"
   },
-  "blacklistAddButton": {
+  "blocklistAddButton": {
     "message": "Přidat",
     "description": "Add"
   },
-  "blacklistNotificationAlreadyExists": {
+  "blocklistNotificationAlreadyExists": {
     "message": "Šablona URL adresy již existuje.",
     "description": "URL pattern already exists."
   },
-  "blacklistHintNoEntries": {
+  "blocklistHintNoEntries": {
     "message": "Žádné položky k dispozici",
     "description": "No entries available"
   },
