--- a/src/_locales/ro_RO/messages.json
+++ b/src/_locales/ro_RO/messages.json
@@ -275,27 +275,27 @@
     "message": "Minimul cât trebuie rotită rotița de scrol pentru a declanșa gestul.",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
-  "blacklistLabelInformation": {
+  "blocklistLabelInformation": {
     "message": "Informație:",
     "description": "Information:"
   },
-  "blacklistTextInformation": {
+  "blocklistTextInformation": {
     "message": "Adaugă modele de URL-uri pentru a dezactiva Gesturefy pentru anumite site-uri. Modelele permit metacaractere \"*\" şi trebuie să aibă forma de <scheme>://<host><path>.",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
-  "blacklistPlaceholderURL": {
+  "blocklistPlaceholderURL": {
     "message": "Introduceţi modelul URL-ului",
     "description": "Enter URL match pattern"
   },
-  "blacklistAddButton": {
+  "blocklistAddButton": {
     "message": "Adaugă",
     "description": "Add"
   },
-  "blacklistNotificationAlreadyExists": {
+  "blocklistNotificationAlreadyExists": {
     "message": "Acest model URL există deja.",
     "description": "URL pattern already exists."
   },
-  "blacklistHintNoEntries": {
+  "blocklistHintNoEntries": {
     "message": "Nici o intrare disponibilă",
     "description": "No entries available"
   },
