--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -37,9 +37,9 @@
     "message": "Extras",
     "description": "Extras"
   },
-  "navigationBlocklist": {
-    "message": "Blocklist",
-    "description": "Blocklist"
+  "navigationBlacklist": {
+    "message": "Exclusions",
+    "description": "URL Exclusions"
   },
   "navigationAbout": {
     "message": "About",
