Revert "adjust blacklist renaming"
This reverts commit ae03e630c1da71fc7254b059ab72fed91b5b97fd.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -37,9 +37,9 @@
     "message": "Extras",
     "description": "Extras"
   },
-  "navigationBlacklist": {
-    "message": "Exclusions",
-    "description": "URL Exclusions"
+  "navigationBlocklist": {
+    "message": "Blocklist",
+    "description": "Blocklist"
   },
   "navigationAbout": {
     "message": "About",
