--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -275,27 +275,27 @@
     "message": "La quantité minimale de défilement de la molette avans que le geste soit déclenché.",
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
-  "blocklistLabelInformation": {
+  "blacklistLabelInformation": {
     "message": "Information :",
     "description": "Information:"
   },
-  "blocklistTextInformation": {
+  "blacklistTextInformation": {
     "message": "Ajouter des modèles de correspondance d'URL pour désactiver Gesturefy pour certains sites Web. Le modèle de correspondance autorise les jokers \"*\" et doit être sous la forme de <scheme>://<host><path>.",
     "description": "Add URL match patterns to disable Gesturefy for certain websites. The match pattern allows \"*\" wildcards and must be in the form of <scheme>://<host><path>."
   },
-  "blocklistPlaceholderURL": {
+  "blacklistPlaceholderURL": {
     "message": "Entrez le modèle de correspondance de l'URL",
     "description": "Enter URL match pattern"
   },
-  "blocklistAddButton": {
+  "blacklistAddButton": {
     "message": "Ajouter",
     "description": "Add"
   },
-  "blocklistNotificationAlreadyExists": {
+  "blacklistNotificationAlreadyExists": {
     "message": "Le modèle d'URL existe déjà.",
     "description": "URL pattern already exists."
   },
-  "blocklistHintNoEntries": {
+  "blacklistHintNoEntries": {
     "message": "Aucune entrée disponible",
     "description": "No entries available"
   },
